<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/table_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_construction_name" />

        <View style="@style/empty_view"></View>

        <TextView
            android:id="@+id/construction_name"
            style="@style/table_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="工程信息" />
    </LinearLayout>

    <LinearLayout
        style="@style/table_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_construction_id" />

        <View style="@style/empty_view"></View>

        <TextView
            android:id="@+id/construction_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="工程信息" />
    </LinearLayout>

    <LinearLayout
        style="@style/table_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_construction_address" />

        <View style="@style/empty_view"></View>

        <TextView
            android:id="@+id/construction_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="工程信息" />
    </LinearLayout>

    <LinearLayout
        style="@style/table_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_construction_tel" />

        <View style="@style/empty_view"></View>

        <TextView
            android:id="@+id/construction_tel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="工程信息" />
    </LinearLayout>

    <LinearLayout
        style="@style/table_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_construction_area" />

        <View style="@style/empty_view"></View>

        <TextView
            android:id="@+id/construction_area"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/table_construction_tel" />
    </LinearLayout>

    <LinearLayout
        style="@style/table_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_construction_type" />

        <View style="@style/empty_view"></View>

        <TextView
            android:id="@+id/construction_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="工程信息" />
    </LinearLayout>

    <LinearLayout
        style="@style/table_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_construction_manager" />

        <View style="@style/empty_view"></View>

        <TextView
            android:id="@+id/construction_manager"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="工程信息" />
    </LinearLayout>

    <LinearLayout
        style="@style/table_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_construction_user" />

        <View style="@style/empty_view"></View>

        <TextView
            android:id="@+id/construction_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="工程信息" />
    </LinearLayout>

</LinearLayout>